# 2026-Mistral-Worldwide-Hackathon---SecurityPrime-Mistral-Edition

./: .env.example  .gitignore  .prettierignore  .prettierrc  ATTRIBUTION.md  CODE_OF_CONDUCT.md  IDEAS.md  LICENSE  MistralIndex.html  QUICKSTART.md  README.md  build.bat  dev.bat  frontend-only.bat  index.html  install-securityprime.bat  install-securityprime.ps1  little-snitch.html  package-lock.json  package.json  pitch-deck.html  readme.html  setup.bat  shutdown-node.bat  svelte.config.js  tailwind.config.js  vite.config.ts
blog/: announcing-securityprime-release.md
config/: ollama_cloud_config.json
docs/: API_REFERENCE.md  DEMO_VIDEO_SCRIPT.md  FLAGSHIP_ROADMAP.md  LITTLE_SNITCH_INTEGRATION.md  MSP_DEPLOYMENT_GUIDE.md  MistralIndex_PitchDeck.md  USER_GUIDE.html  USER_GUIDE.md
e2e-tests/: README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
e2e-tests/tests/: dashboard.spec.ts
e2e-tests/utils/: app.ts
msp-dashboard/: package.json
msp-dashboard/src/: app.css  app.html
msp-dashboard/src/lib/: api.ts
msp-dashboard/src/routes/: +layout.svelte  +page.svelte
scripts/: generate-icons.js
server/: Cargo.toml
server/migrations/: 20240101000000_initial_schema.sql
server/src/: auth.rs  db.rs  error.rs  main.rs  models.rs
server/src/api/: alerts.rs  auth.rs  endpoints.rs  licenses.rs  mod.rs  organizations.rs  reports.rs  users.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: cmd.rs  main.rs  utils.rs
src-tauri/src/database/: mod.rs  models.rs  queries.rs
src-tauri/src/database/migrations/: 001_initial_schema.sql  002_license_table.sql  003_activity_log.sql
src-tauri/src/modules/: agent.rs  app_control.rs  compliance.rs  encryption.rs  firewall.rs  flagship.rs  history.rs  isolation.rs  management.rs  mod.rs  network.rs  plugins.rs  report_generator.rs  reporting.rs  scanner.rs  secure_storage.rs  security_hardening.rs  tamper_detection.rs  vpn.rs  vulnerability.rs
src-tauri/src/service/: ipc.rs  mod.rs  windows_service.rs
src-tauri/tests/: compliance_tests.rs  integration_tests.rs  isolation_tests.rs  management_tests.rs  mod.rs  tamper_detection_tests.rs
src/lib/: api.ts  flagship.ts  utils.ts
src/lib/components/: ActivityLog.svelte  CatBoyGame.svelte  ErrorBoundary.svelte  LoadingSpinner.svelte  MistralCat.svelte  MistralLogo.svelte  MistralPixelCat.svelte  PageTransition.svelte  ScanWidget.svelte  SecurityScoreCard.svelte  Sidebar.svelte  Skeleton.svelte  StatusCard.svelte  ThreatAlert.svelte  index.ts
src/lib/stores/: catboy.ts  index.ts  modules.ts  scanner.ts  security.ts  theme.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/agent/: +page.svelte
src/routes/analytics/: +page.svelte
src/routes/benchmark/: +page.svelte
src/routes/compliance/: +page.svelte
src/routes/encryption/: +page.svelte
src/routes/firewall/: +page.svelte
src/routes/flagship/: +page.svelte
src/routes/hardening-wizard/: +page.svelte
src/routes/investigation/: +page.svelte
src/routes/isolation/: +page.svelte
src/routes/management/: +page.svelte
src/routes/network/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/scanner/: +page.svelte
src/routes/security-hardening/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/tamper-detection/: +page.svelte
src/routes/vpn/: +page.svelte
src/routes/vulnerability/: +page.svelte
static/: catboy.js
(+21 files in other folders)
